--- a/template.html
+++ b/template.html
@@ -1,13 +1,17 @@
 <style type="text/css">
-    #throbber {
-        padding: 10px;
-        position:absolute;
-        left: 45%;
-        top:45%;
-        margin: -50px 0 0 -50px;
-        z-index: 10000;
-        width: 100px;
-        height: 100px;
+    table, td {
+        text-transform: capitalize;
+        font-size: 18px;
+        vertical-align: middle !important;
+    }
+    td> i {
+        font-size: 48px;
+    }
+    #answer button {
+        width: 72px;
+    }
+    #answer2 button {
+        width: 72px;
     }
 </style>
 
@@ -19,27 +23,20 @@
             <a class="close">×</a>
             <strong>Well done!</strong> Your answer has been saved</strong>
     </div>
+    <div id="loading" class="alert alert-info" style="display:none;">
+            <a class="close">×</a>
+            <strong>Loadign next photo-emoticon...</strong>
+    </div>
     <div id="taskcompleted" class="alert alert-info" style="display:none;">
         <strong>The task has been completed!</strong> Thanks a lot!</strong>
 </div>
 
-<div id="finish" class="alert alert-success" style="display:none;">
-    <strong>Congratulations!</strong> You have participated in all available tasks!</strong>
-<br/>
-<div class="alert-actions">
-    <a class="btn small" href="/">Go back</a>
-    <a class="btn small" href="/app">or, Check other applications</a>
-</div>
-    </div>
-    <div id="error" class="alert alert-error" style="display:none;">
+<div id="error" class="alert alert-error" style="display:none;">
 <a class="close">×</a>
 <strong>Error!</strong> Something went wrong, please contact the site administrators</strong>
     </div>
   </div> <!-- End Success and Error Messages for the user -->
 </div>
-
-
-<div id="throbber"></div>
 
 <div class="row skeleton">
   <div id="question" class="span12">
@@ -47,34 +44,25 @@
   </div>
 </div>
 
-<style>
-    #answer button {
-        width: 72px;
-    }
-    #answer2 button {
-        width: 72px;
-    }
-</style>
-
 <div class="row skeleton" style="padding-top:10px;">
       <!-- Answer buttons -->
       <div  class="span5">
           <div id="answer">
-          <button class="btn btn-large" onclick="submitTask('tongue')">:-P</button>
-          <button class="btn btn-large" onclick="submitTask('kiss')">:-*</button>
-          <button class="btn btn-large" onclick="submitTask('cry')">:~(</button>
-          <button class="btn btn-large" onclick="submitTask('sad')">:-(</button>
-          <button class="btn btn-large" onclick="submitTask('wink')">;-)</button>
+          <button class="btn btn-large btn-answer" value="Tongue :-P">:-P</button>
+          <button class="btn btn-large btn-answer" value="Kiss :-*">:-*</button>
+          <button class="btn btn-large btn-answer" value="Cry :~(">:~(</button>
+          <button class="btn btn-large btn-answer" value="Sad :-(">:-(</button>
+          <button class="btn btn-large btn-answer" value="Wink ;-)">;-)</button>
           </div>
           <div id="answer2" style="padding-top:3px;">
-          <button class="btn btn-large" onclick="submitTask('surprised')">:-O</button>
-          <button class="btn btn-large" onclick="submitTask('disappointed')">:-|</button>
-          <button class="btn btn-large" onclick="submitTask('angry')">:-@</button>
-          <button class="btn btn-large" onclick="submitTask('grin')">:-D</button>
-          <button class="btn btn-large" onclick="submitTask('smile')">:-)</button>
+          <button class="btn btn-large btn-answer" value="Surprised :-O">:-O</button>
+          <button class="btn btn-large btn-answer" value="Disappointed :-|">:-|</button>
+          <button class="btn btn-large btn-answer" value="Angry :-@">:-@</button>
+          <button class="btn btn-large btn-answer" value="Grin :-D">:-D</button>
+          <button class="btn btn-large btn-answer" value="Smile :-)">:-)</button>
           </div>
           <div id="answer3" style="padding-top:3px; text-align:center;">
-          <button class="btn btn-large" onclick="submitTask('dontknow')">I don't know</button>
+          <button class="btn btn-large btn-answer" value="dontknow">I don't know</button>
           </div>
           <div style="height:42px;">
            <hr>
@@ -92,80 +80,57 @@
           </div>
       </div>
   <div class="span3" style="text-align:center">
-    <img id="photo" class="img-circle" src="http://img339.imageshack.us/img339/9017/loadingo.png" style="max-width=100%">
+      <a id="photo-link" href="http://flickr.com/photos/thefacewemake">
+        <img id="photo" class="img-circle img-polaroid" src="http://img339.imageshack.us/img339/9017/loadingo.png" style="max-width=100%">
+    </a>
     <p>
     Copyright © <a href="http://www.flickr.com/photos/thefacewemake">The Face We Make</a>
     </p>
     <p>by <a href="http://dxtr.com">Dexter Miranda</a>
     </p>
   </div>
-  <div class="span2">
+  <div class="span2 pull-right">
+      <a class="btn btn-primary btn-large" href="/app/thefacewemake/tutorial"><i class="icon-question-sign"></i> Tutorial</a>
   </div>
+</div>
+
+<div id="finish" class="row skeleton" style="display:none">
+    <div span="span12">
+        <h1>Congratulations! You have participated in all available photos!</h1>
+        <h2>Check your results</h2>
+        <h2 style="display: none;">We will be adding more photos soon, so you can try it again!</h2>
+        <table class="table table-condensed">
+            <thead>
+                <tr>
+                    <th width="150">
+                        Emoticons
+                    </th>
+                    <th>
+                    </th>
+                    <th>
+                        Correct Answer
+                    </th>
+                    <th>
+                        Your answer
+                    </th>
+                </tr>
+                <tbody id="results">
+                </tbody>
+            </thead>
+        </table>
+    </div>
+    <hr>
+    <a class="btn small" href="/"><i class="icon-home"></i> Go Home</a>
+    <a class="btn small" href="/app"><i class="icon-heart"></i> Help in other applications</a>
 </div>
 
 <script src="/static/js/pybossa/pybossa.js" type="text/javascript"></script>
 <script src="/static/js/throbber/throbber.js" type="text/javascript"></script>
 <script>
 var appname = 'thefacewemake';
-var spinner = new Throbber({
-    color: 'black',
-    size: 90
-});
-
-// The spinner is attached to a div overlayed in top of the photo. 
-// This div is only shown when the spinner is active, 
-// otherwise, the div is hidden from the view to show the photo.¬
-
-spinner.appendTo (document.getElementById('throbber'));
-
 var taskAnswer = "";
-
-// This function shows the spinner div and starts its animation¬
-function spinnerStart() {
-    $("#throbber").show();
-    spinner.start();
-    console.log("Spinner started!");
-}
-
-// This function stops the spinner and hides the spinner div¬
-function spinnerStop() {
-    spinner.stop()
-    $("#throbber").hide();
-    console.log("Spinner stopped!");
-}
-// Function to load the TaskRun data into the HTML skeleton
-function loadData( task ) {
-    taskAnswer = "Cleaned!";
-    if ( !$.isEmptyObject(task) ) {
-        if (task.state=='completed') {
-            $('#answer').hide();
-            $('#disqus_thread').hide();
-            $('#taskcompleted').show();
-        }
-        loadUserProgress();
-        setTimeout(function() { $("#wrong").fadeOut() }, 1000);
-        setTimeout(function() { $("#correct").fadeOut() }, 1000);
-        $("#question h1").text(task.info.question);
-        $("#task-id").text(task.id);
-        $("#photo-link").attr("href", task.info.link);
-        $("#photo").attr("src", task.info.url_b);
-        taskAnswer = task.info.photo_info['photo']['description']['_content'].toLowerCase();
-    }
-    else {
-        $(".skeleton").hide();
-        $("#finish").fadeIn();
-    }
-}
-
-function loadTask( task_id ) {
-    // Uncomment next line for debugging purposes
-    //console.log( data );
-    var t = $.ajax({
-        url: '/api/task/'+task_id,
-        dataType: 'json'
-    });
-    t.done( loadData );
-}
+var correctAnswer = "";
+var emoticon = "";
 
 function loadUserProgress() {
     pybossa.userProgress(appname).done(function(data){
@@ -178,53 +143,79 @@ function loadUserProgress() {
     });
 }
 
-// Function to submit and save the TaskRun in PyBossa
-function submitTask(answer) {
-    // Get the task-id
-    var taskid = $("#task-id").text();
+pybossa.taskLoaded(function(task, deferred) {
+    if ( !$.isEmptyObject(task) ) {
+        // load image from flickr
+        var img = $('<img />');
+        img.load(function() {
+            // continue as soon the image is loaded
+            deferred.resolve(task);
+        });
+        img.attr('src', task.info.url_b).css('max-width', "100%");
+        img.addClass('img-polaroid img-circle');
+        task.info.image = img;
+    }
+    else {
+        deferred.resolve(task);
+    }
+});
 
-    if (answer != 'dontknow') {
-        if (taskAnswer.indexOf(answer) != -1) {
-            $("#correct").show();
-        }
-        else {
-            $("#wrong").show();
+pybossa.presentTask(function(task, deferred) {
+    if ( !$.isEmptyObject(task) ) {
+        loadUserProgress();
+        $('#photo-link').html('').append(task.info.image);
+        $("#question>h1").html(task.info.question);
+        $('#task-id').html(task.id);
+
+        // Add feedback for user and results summary
+        setTimeout(function() { $("#wrong").fadeOut() }, 1000);
+        setTimeout(function() { $("#correct").fadeOut() }, 1000);
+        // Load image into results summary
+        emoticon = "<td><img src='" + task.info.url_b + "' class='img-polaroid' style='height:100px'></td>";
+        var tmp = task.info.photo_info['photo']['description']['_content'].split('\n\n');
+        taskAnswer = tmp[0];
+        correctAnswer = "<td>" + taskAnswer + "</td>";
+
+        $('.btn-answer').off('click').on('click', function(evt) {
+            var answer = $(evt.target).attr("value");
+            // Add result to results summary and feedback to the user
+            if (answer != 'dontknow') {
+                if (taskAnswer.indexOf(answer) != -1) {
+                    $("#correct").show();
+                    $("#results").append('<tr class="success">' + emoticon + '<td><i class="icon-thumbs-up"></i></td>' + correctAnswer + '<td>' + answer + '</td></tr>');
+                }
+                else {
+                    $("#wrong").show();
+                    $("#results").append('<tr class="error">' + emoticon + '<td><i class="icon-thumbs-down"></i></td>' + correctAnswer + '<td>' + answer + '</td></tr>');
+                }
+            }
+            else {
+                $("#results").append('<tr class="info">' + emoticon + '<td><i class="icon-question-sign"></i></td>' + correctAnswer + '<td>' + answer + '</td></tr>');
+            }
+
+            if (typeof answer != 'undefined') {
+                console.log(answer);
+                pybossa.saveTask(task.id, answer).done(function() {
+                    deferred.resolve();
+                });
+                $("#loading").fadeIn(500);
+            }
+            else {
+                $("#error").show();
+            }
+        });
+        $("#loading").hide();
+    }
+    else {
+        $(".skeleton").hide();
+        $("#loading").hide();
+        $("#finish").fadeIn(500);
+        if (!taskAnswer) {
+            $("h2").toggle();
+            $("table").toggle();
         }
     }
-    // Save the task
-    answer = {answer:answer, photo:$("#photo").attr("src")};
-    pybossa.saveTask(taskid, answer).done( function( data ) {
-        // Uncoment next line for debugging purposes
-        //console.log("Answer saved!");
-        // FadeIn & Out the success div feedback
-        //$("#success").fadeIn();
-        //setTimeout(function() { $("#success").fadeOut() }, 2000);
-        // Load a new task
-        pybossa.newTask(appname).done( function( data ){ loadData( data.task ) });
-        //window.location.pathname = "/app/" + appname + "/newtask";
-    });
-}
+});
 
-// Check if the user is loading directly a task or requesting a new one
-var taskId = pybossa.getCurrentTaskId(window.location.pathname);
-
-if (taskId){
-    // The user is loading directly a task, so load then input data
-    loadTask(taskId);
-}
-else {
-    // The user is requesting a new task, so get a new one
-    pybossa.newTask(appname).done( function( data ) { 
-
-        if ( !$.isEmptyObject(data.task) ) {
-            //window.location.pathname = "/app/" + appname + "/task/" + data.task.id;
-            history.pushState({},"Title","/app/" + appname + "/task/" + data.task.id);
-            loadData(data.task);
-        }
-        else {
-            $(".skeleton").hide();
-            $("#finish").fadeIn();
-        }
-    });
-}
+pybossa.run(appname);
 </script>
