--- a/long_description.html
+++ b/long_description.html
@@ -1,13 +1,4 @@
-<div class="row">
-    <div class="span12">
-        <a href="../app/thefacewemake/newtask" class="btn btn-large btn-primary">
-            <i class="icon-thumbs-up"></i> Start Collaborating! 
-        </a>
-        <hr>
-    </div>
-</div>
-
-<div class="row">
+<div class="row-fluid">
     <div class="span12">
         <p class="lead">
         <a href="http://thefacewemake.org/about/">The Face We Make Project</a> tries to reverse the process that created the emoticon: adding "feelings" to electronic communications. This application uses the photos taken by <a href="http://dxtr.com/#info">Dexter Miranda</a> for the project in order to analyze if humans are able to identify the right emoticon in the picture.
