--- a/template.html
+++ b/template.html
@@ -7,95 +7,63 @@
     td> i {
         font-size: 48px;
     }
-    #answer button {
-        width: 72px;
+    .skeleton {
+        margin-top: 5px;
     }
-    #answer2 button {
-        width: 72px;
+    .btn-answer {
+        width: 50px;
+        height: 50px;
+        margin-top: 2px;
+    }
+
+    .emoticons {
+        text-align: center;
     }
 </style>
-
-<div class="row">
-    <!-- Success and Error Messages for the user --> 
-    <!-- Question, task id, photo and action buttons for answering the question-->
-    <div class="span6 offset2" style="height:50px">
-        <div id="success" class="alert alert-success" style="display:none;">
-            <a class="close">×</a>
-            <strong>Well done!</strong> Your answer has been saved</strong>
-    </div>
-    <div id="loading" class="alert alert-info" style="display:none;">
-            <a class="close">×</a>
-            <strong>Loadign next photo-emoticon...</strong>
-    </div>
-    <div id="taskcompleted" class="alert alert-info" style="display:none;">
-        <strong>The task has been completed!</strong> Thanks a lot!</strong>
-</div>
-
-<div id="error" class="alert alert-error" style="display:none;">
-<a class="close">×</a>
-<strong>Error!</strong> Something went wrong, please contact the site administrators</strong>
-    </div>
-  </div> <!-- End Success and Error Messages for the user -->
+<div class="row skeleton">
+  <div class="col-md-12">
+    <h1 class="hidden-xs">What emoticon is he/she making?</h1>
+      <a id="photo-link" href="http://flickr.com/photos/thefacewemake">
+          <img id="photo" class="img-circle img-responsive" src="http://img339.imageshack.us/img339/9017/loadingo.png" style="max-width=100%">
+          </a>
+      <p class="hidden-xs">
+      Copyright © <a href="http://www.flickr.com/photos/thefacewemake">The Face We Make</a>
+      </p>
+      <p class="hidden-xs">by <a href="http://dxtr.com">Dexter Miranda</a>
+      </p>
+  </div>
 </div>
 
 <div class="row skeleton">
-  <div id="question" class="span12">
-      <h1>Question</h1>
-  </div>
+      <!-- Answer buttons -->
+      <div class="col-xs-12 col-md-5 emoticons">
+          <button class="btn btn-danger btn-large btn-answer" value="Tongue :-P">:-P</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Kiss :-*">:-*</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Cry :~(">:~(</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Sad :-(">:-(</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Wink ;-)">;-)</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Surprised :-O">:-O</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Disappointed :-|">:-|</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Angry :-@">:-@</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Grin :-D">:-D</button>
+          <button class="btn btn-danger btn-large btn-answer" value="Smile :-)">:-)</button>
+    </div>
 </div>
 
-<div class="row skeleton" style="padding-top:10px;">
-      <!-- Answer buttons -->
-      <div  class="span5">
-          <div id="answer">
-          <button class="btn btn-large btn-answer" value="Tongue :-P">:-P</button>
-          <button class="btn btn-large btn-answer" value="Kiss :-*">:-*</button>
-          <button class="btn btn-large btn-answer" value="Cry :~(">:~(</button>
-          <button class="btn btn-large btn-answer" value="Sad :-(">:-(</button>
-          <button class="btn btn-large btn-answer" value="Wink ;-)">;-)</button>
-          </div>
-          <div id="answer2" style="padding-top:3px;">
-          <button class="btn btn-large btn-answer" value="Surprised :-O">:-O</button>
-          <button class="btn btn-large btn-answer" value="Disappointed :-|">:-|</button>
-          <button class="btn btn-large btn-answer" value="Angry :-@">:-@</button>
-          <button class="btn btn-large btn-answer" value="Grin :-D">:-D</button>
-          <button class="btn btn-large btn-answer" value="Smile :-)">:-)</button>
-          </div>
-          <div id="answer3" style="padding-top:3px; text-align:center;">
-          <button class="btn btn-large btn-answer" value="dontknow">I don't know</button>
-          </div>
-          <div style="height:42px;">
-           <hr>
-           <p style="font-size:24px;">Your answer is: <span id="correct" style="display:none"><i class="icon-thumbs-up"></i> Correct!</span><span id="wrong" style="display:none"> <i class="icon-thumbs-down"></i>Wrong!</span></p>
-          </div>
-          <div>
-            <hr>
-            <h5><strong>Your progress</strong></h5>
-            <p>You are working now on task: <span id="task-id" class="label label-warning">#</span></p>
-            <p>You have completed: <span id="done" class="label label-info"></span> tasks from
-            <span id="total" class="label label-inverse"></span></p>
-            <div class="progress progress-striped">
-                <div id="progress" rel="tooltip" title="#" class="bar" style="width: 0%;"></div>
-            </div>
-          </div>
-      </div>
-  <div class="span3" style="text-align:center">
-      <a id="photo-link" href="http://flickr.com/photos/thefacewemake">
-        <img id="photo" class="img-circle img-polaroid" src="http://img339.imageshack.us/img339/9017/loadingo.png" style="max-width=100%">
-    </a>
-    <p>
-    Copyright © <a href="http://www.flickr.com/photos/thefacewemake">The Face We Make</a>
-    </p>
-    <p>by <a href="http://dxtr.com">Dexter Miranda</a>
-    </p>
-  </div>
-  <div class="span2 pull-right">
+<div class="row skeleton">
+    <div class="col-md-12" style="text-align:center;">
+        <h4>Your answer is</h4>
+        <p style="font-size:24px;"><span id="correct" style="display:none"><i class="fa fa-thumbs-up"></i> Correct!</span><span id="wrong" style="display:none"> <i class="fa fa-thumbs-down"></i>Wrong!</span></p>
+    </div>
+</div>
+
+  <div class="hidden-xs col-md-2 pull-right">
       <a class="btn btn-primary btn-large" href="/app/thefacewemake/tutorial"><i class="icon-question-sign"></i> Tutorial</a>
   </div>
 </div>
 
 <div id="finish" class="row skeleton" style="display:none">
-    <div span="span12">
+    <div class="col-md-12">
         <h1>Congratulations! You have participated in all available photos!</h1>
         <h2>Check your results</h2>
         <h2 style="display: none;">We will be adding more photos soon, so you can try it again!</h2>
@@ -152,7 +120,7 @@ pybossa.taskLoaded(function(task, deferred) {
             deferred.resolve(task);
         });
         img.attr('src', task.info.url_b).css('max-width', "100%");
-        img.addClass('img-polaroid img-circle');
+        img.addClass('img-responsive img-circle col-xs-6 col-xs-offset-3');
         task.info.image = img;
     }
     else {
@@ -162,7 +130,7 @@ pybossa.taskLoaded(function(task, deferred) {
 
 pybossa.presentTask(function(task, deferred) {
     if ( !$.isEmptyObject(task) ) {
-        loadUserProgress();
+        //loadUserProgress();
         $('#photo-link').html('').append(task.info.image);
         $("#question>h1").html(task.info.question);
         $('#task-id').html(task.id);
@@ -186,7 +154,7 @@ pybossa.presentTask(function(task, deferred) {
                 }
                 else {
                     $("#wrong").show();
-                    $("#results").append('<tr class="error">' + emoticon + '<td><i class="icon-thumbs-down"></i></td>' + correctAnswer + '<td>' + answer + '</td></tr>');
+                    $("#results").append('<tr class="danger">' + emoticon + '<td><i class="icon-thumbs-down"></i></td>' + correctAnswer + '<td>' + answer + '</td></tr>');
                 }
             }
             else {
