--- a/tutorial.html
+++ b/tutorial.html
@@ -84,7 +84,7 @@
             <div class="modal-footer">
                 <a id="prevBtn" href="#" onclick="showStep('prev')" class="btn">Previous</a>
                 <a id="nextBtn" href="#" onclick="showStep('next')" class="btn btn-success">Next</a>
-                <a id="startContrib" href="../thefacewemake/newtask" class="btn btn-primary" style="display:none"><i class="icon-thumbs-up"></i> Start collaborating!</a>
+                <a id="startContrib" href="../thefacewemake2/newtask" class="btn btn-primary" style="display:none"><i class="icon-thumbs-up"></i> Start collaborating!</a>
             </div>
         </div>
     </div>
