--- a/template.html
+++ b/template.html
@@ -1,12 +1,12 @@
 <style type="text/css">
-    table, td {
+    /* table, td {
         text-transform: capitalize;
         font-size: 18px;
         vertical-align: middle !important;
     }
     td> i {
         font-size: 48px;
-    }
+    }*/
     .skeleton {
         margin-top: 5px;
         text-align: center;
@@ -85,7 +85,7 @@
         <h1>Congratulations! You have participated in all available photos!</h1>
         <h2>Check your results</h2>
         <h2 style="display: none;">We will be adding more photos soon, so you can try it again!</h2>
-        <table class="table table-condensed">
+        <table class="table table-responsive table-condensed">
             <thead>
                 <tr>
                     <th width="150">
@@ -110,7 +110,7 @@
 <script src="/static/js/pybossa/pybossa.js" type="text/javascript"></script>
 <script src="/static/js/throbber/throbber.js" type="text/javascript"></script>
 <script>
-var appname = 'thefacewemake';
+var appname = 'thefacewemake2';
 var taskAnswer = "";
 var correctAnswer = "";
 var emoticon = "";
